# album-ranker

./: .gitignore  AGENTS.md  BACKEND_IMPROVEMENT_PLAN.md  Makefile  README.md  SPEC.md  UI_IMPROVEMENT_PLAN.md  pyproject.toml
launchd/: com.darkcreation.album-ranker-backup.plist
src/album_ranker/: app.py  backup.py  db.py  importer.py  main.py  openai_client.py  schemas.py  settings.py  ui.py
src/album_ranker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_ai_client.py  test_api.py  test_backup.py  test_db.py  test_importer.py  test_schemas.py  test_settings.py
